# hypersolve

./: Cargo.toml  LICENSE  PERFORMANCE.md  README.md  dispatch_trace.md
benches/: certification.rs  dispatch_trace.rs
benches/competitors/: cgal_quadratic.cpp  run_cgal_quadratic.sh
examples/: basic.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: active_set_quadratic_regeneration.rs  algebraic_binary.rs  algebraic_difference_comparison.rs  algebraic_mobius.rs  algebraic_polynomial_image.rs  algebraic_rational_image.rs  curve_resultant.rs  curve_substitution.rs  dense_bareiss_multi_rhs.rs  failed_constraint_minimal_removals.rs  modified_newton_bounded_quadratic_seed.rs  modified_newton_bounded_substitution_seed.rs  sketch_arc_arc_tangent.rs  sketch_arc_cubic_second_order.rs  sketch_arc_cubic_tangent.rs  sketch_arc_line_tangent.rs  sketch_circle_circle_tangent.rs  sketch_concentric.rs  sketch_cubic_cubic_c2.rs  sketch_cubic_cubic_g2.rs  sketch_cubic_cubic_tangent.rs  sketch_cubic_line_tangent.rs  sketch_failed_constraints.rs  sketch_line_arc_length.rs  sketch_line_arc_sweep_length.rs  sketch_oriented_angle.rs  sketch_point_line_incidence.rs  sketch_point_on_arc.rs  sketch_point_on_cubic.rs  sketch_projected_arc_cubic_curve_second_order_contact.rs  sketch_projected_arc_cubic_curve_tangent.rs  sketch_projected_arc_line_tangent.rs  sketch_projected_cubic_curve_cubic_curve_c2.rs  sketch_projected_cubic_curve_cubic_curve_g2.rs  sketch_projected_cubic_curve_cubic_curve_tangent.rs  sketch_projected_cubic_curve_line_tangent.rs  sketch_projected_cubic_line_tangent.rs  sketch_projected_distance.rs  sketch_projected_distance_range.rs  sketch_projected_equal_length.rs  (+26 more)
src/: active_set.rs  affine.rs  algebraic.rs  algebraic_binary.rs  algebraic_mobius.rs  algebraic_polynomial_image.rs  algebraic_rational_image.rs  alpha.rs  bareiss.rs  batch.rs  branches.rs  certification.rs  curve_resultant.rs  curve_substitution.rs  diagnostics.rs  direct.rs  domain_certification.rs  eval.rs  failed_constraints.rs  interval.rs  jacobian.rs  lib.rs  linalg.rs  model.rs  polynomial.rs  predicates.rs  prepared.rs  rank.rs  residual_replay.rs  resultant.rs  root_isolation.rs  sketch.rs  sketch_arc_incidence.rs  sketch_arc_length.rs  sketch_arc_tangent.rs  sketch_builders.rs  sketch_certificates.rs  sketch_circle_tangent.rs  sketch_cubic_tangent.rs  sketch_degeneracy.rs  (+13 more)
src/domain/: geometry.rs  mod.rs  pcb.rs  toolpath.rs
tests/: residual_props.proptest-regressions  residual_props.rs  smoke.rs
