[package]
name = "hypersolve-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hyperlimit = { path = "../../hyperlimit", default-features = false }
hyperreal = { path = "../../hyperreal", default-features = false }
hypersolve = { path = "..", default-features = false }

[[bin]]
name = "sketch_projected_distance"
path = "fuzz_targets/sketch_projected_distance.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sketch_workplane_symmetry"
path = "fuzz_targets/sketch_workplane_symmetry.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sketch_arc_line_tangent"
path = "fuzz_targets/sketch_arc_line_tangent.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sketch_oriented_angle"
path = "fuzz_targets/sketch_oriented_angle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "algebraic_mobius"
path = "fuzz_targets/algebraic_mobius.rs"
test = false
doc = false
bench = false

[[bin]]
name = "algebraic_polynomial_image"
path = "fuzz_targets/algebraic_polynomial_image.rs"
test = false
doc = false
bench = false
